--- a/index.html
+++ b/index.html
@@ -53,20 +53,22 @@
 
   <div class="col-sm-1"></div>
 
-   <div class="col-sm-2">
+   <div class="col-sm-2 col-xs-5">
     <div class="navbar-header">
-       <a class="navbar-brand" href="https://loopinewool.com/"><img src="Img/Image 1.png" class="img-responsive wow animated slideInLeft" width="150"></a>
+       <a class="navbar-brand" href="https://ezigas.co.nz/"><img src="Img/Image 1.png" class="img-responsive wow animated slideInLeft" width="150"></a>
     </div><!-- header-->
     </div>
 
     <div class="col-sm-5"></div>
 
-    <div class="col-sm-2" style="padding-top:10px; padding-bottom:10px;">
+    <div class="col-sm-2 col-xs-4" style="padding-top:10px; padding-bottom:10px;">
     <a href="tel:0800 427 463"><span class="span1">0800 427 463</span></a>
+    <a href="tel:0800 427 463"><i class="fa fa-phone fa-3x"></i></a>
     </div>
 
-    <div class="col-sm-2">
+    <div class="col-sm-2 col-xs-1">
     <a href="#contact-form"><button type="button" class="btn btn3">GET STARTED</button></a>
+    <a href="#contact-form"><i class="fa fa-envelope fa-3x"></i></a>
     </div>
 
       </div><!--row-->
@@ -95,9 +97,9 @@
 
 
     <form id="inquery" class="form-inline">
-      <input type="text" id="email" placeholder="NAME" name="pswd" class="abcd">
-      <input type="email" id="pwd" placeholder="CONTACT" name="email">
-      <input type="text" id="enquiry2" placeholder="ENQUIRY* (MAX 100 WORDS)" name="enquiry" style="width:270px;">
+      <input type="text" id="email" placeholder="NAME*" name="pswd" class="abcd">
+      <input type="email" id="pwd" placeholder="CONTACT*" name="email">
+      <input type="text" id="enquiry2" placeholder="ENQUIRY* (MAX 100 WORDS)" name="enquiry" >
       <button type="submit">REQUEST CALLBACK</button>
     </form>
 
@@ -142,7 +144,7 @@
 
 <div class="container-fluid second">
 <div class="container">
-<div class="row">
+<div class="row branding">
 
 <div class="col-sm-4 text-center">
 
@@ -220,7 +222,7 @@
 
 <div class="row section-service">
 
- <div class="col-sm-4">
+ <div class="col-sm-4 mobile-service">
 
  <h1 class="h1-num">01</h1>
  <h3 class="h3-head">GAS HOT WATER</h3>
@@ -228,14 +230,14 @@
  <a href="https://ezigas.co.nz/gas-hot-water/"><p class="p9">Learn More</p> </a>
  </div>
 
- <div class="col-sm-4">
+ <div class="col-sm-4 mobile-service">
  <h1 class="h1-num">02</h1>
  <h3 class="h3-head">GAS FIREPLACES</h3>
  <p class="p7">It’s no secret that Kiwi’s love to entertain and nothing creates atmosphere like an open flame fire.</p>
  <a href="https://ezigas.co.nz/gas-fireplaces/"><p class="p9">Learn More</p> </a>
  </div>
 
- <div class="col-sm-4">
+ <div class="col-sm-4 mobile-service">
  <h1 class="h1-num">03</h1>
  <h3 class="h3-head">GAS HEATING</h3>
  <p class="p7">With more than 25 years gas fitting experience EziGas can provide expert advice on the best heating solutions.</p>
@@ -246,9 +248,9 @@
 
 
 
-<div class="row section-service" style="margin-top:80px;">
+<div class="row section-service" > <!-- style="margin-top:80px;" -->
 
- <div class="col-sm-4">
+ <div class="col-sm-4 mobile-service">
 
  <h1 class="h1-num">04</h1>
  <h3 class="h3-head">GAS COOKING</h3>
@@ -256,14 +258,14 @@
  <a href="https://ezigas.co.nz/gas-cooking/"><p class="p9">Learn More</p> </a>
  </div>
 
- <div class="col-sm-4">
+ <div class="col-sm-4 mobile-service">
  <h1 class="h1-num">05</h1>
  <h3 class="h3-head">LPG CONNECTIONS</h3>
  <p class="p7">No Natural Gas in your area? Gas Connection too expensive? Whatever your reason, there is a brilliant alternative.</p>
  <a href="https://ezigas.co.nz/lpg-gas/"><p class="p9">Learn More</p> </a>
  </div>
 
- <div class="col-sm-4">
+ <div class="col-sm-4 mobile-service">
  <h1 class="h1-num">06</h1>
  <h3 class="h3-head">MARINE GAS FITTING</h3>
  <p class="p7">LPG bottle installations on boats when installed properly can be very convenient and cost effective.</p>
@@ -319,29 +321,29 @@
 
     <div class="row">
 
-        <div class="col-sm-6">
-        <div class="input-group">
-        <input type="name" class="form-control aa" id="name" placeholder="NAME*" name="name">
-        </div>
+        <div class="col-sm-6 col-xs-12">
+          <div class="input-group">
+            <input type="name" class="form-control aa" id="name" placeholder="NAME*" name="name">
+          </div>
         </div>
 
-        <div class="col-sm-6">
-         <div class="input-group">
-        <input type="number" class="form-control aa" style="margin-bottom:2px;" id="num" placeholder="CONTACT*" name="contact">
-        </div>
+        <div class="col-sm-6 col-xs-12">
+           <div class="input-group">
+            <input type="number" class="form-control aa" style="margin-bottom:2px;" id="num" placeholder="CONTACT*" name="contact">
+          </div>
         </div>
 
     </div>
 
 
     <div class="row">
-         <div class="col-sm-6">
+         <div class="col-sm-6 col-xs-12">
            <div class="input-group">
             <input type="text" class="form-control aa" id="emailBottom" placeholder="EMAIL*" name="emailBottom">
           </div>
         </div>
 
-       <div class="col-sm-6">
+       <div class="col-sm-6 col-xs-12">
          <div class="input-group">
          <input type="text" class="form-control aa" id="area" placeholder="AREA OF INTEREST*" name="area">
         </div>
@@ -351,7 +353,7 @@
 
        <div class="row">
 
-       <div class="col-sm-12">
+       <div class="col-sm-12 col-xs-12">
         <div class="input-group">
         <textarea class="form-control aa" rows="7" id="comment" placeholder="MESSAGE*" style="padding-top:10px;" name="message"></textarea>
         </div>
@@ -380,7 +382,7 @@
 
 <div class="container-fluid second">
 <div class="container">
-<div class="row">
+<div class="row branding">
 
 <div class="col-sm-4 text-center">
 
@@ -418,25 +420,25 @@
    <div class="row">
 
 
-   <div class="col-sm-3 wow animate fadeIn" style="padding-right:30px;">
-   <img src="Img/Image 1.png" class="img-responsive" width="160">
+   <div class="col-sm-3 wow animate fadeIn">  <!-- style="padding-right:30px;" -->
+      <img src="Img/Image 1.png" class="img-responsive logo-center" width="160">
    </div>
 
 
-   <div class="col-sm-3">
+   <div class="col-sm-3 mobile-format">
     <h4 class="h4aa">GET IN TOUCH</h4>
     <ul class="ul2">
-      <li>0800 GAS INFO</li>
-      <li>0800 427 463</li>
+      <li><a href="tel:0800 427 463">0800 GAS INFO</a></li>
+      <li><a href="tel:0800 427 463">0800 427 463</a></li>
     </ul>
 
-    <a href="#"><img src="Img/Icon awesome-facebook-f.svg" class="img5"></a>
-    <a href="#"><img src="Img/Icon awesome-instagram.svg" class="img5"></a>
+    <a href="https://m.facebook.com/ezigas.co.nz/?ref=bookmarks"><img src="Img/Icon awesome-facebook-f.svg" class="img5"></a>
+    <a href="https://www.instagram.com/ezigasltd/"><img src="Img/Icon awesome-instagram.svg" class="img5"></a>
 
    </div>
 
 
-   <div class="col-sm-3 wow animate fadeIn" style="padding-left:30px;">
+   <div class="col-sm-3 wow animate fadeIn mobile-hide" style="padding-left:30px;">
 
      <h4 class="h4aa">COMPANY INFO</h4>
       <ul class="ul2">
@@ -446,7 +448,7 @@
 
    </div>
 
-   <div class="col-sm-3 wow animate fadeIn">
+   <div class="col-sm-3 wow animate fadeIn mobile-hide">
     <h4 class="h4aa">SERVICES</h4>
     <ul class="ul2">
 
