second form added

--- a/index.html
+++ b/index.html
@@ -98,13 +98,15 @@
     <p class="p2 wow animated flash">EziGas are your ONLY, ONE STOP SHOP for all your Gas requirements, from Natural Gas to LPG Gas connections, appliance sales and a range of installation packages. Offering top quality and best value for money with professional advice.</p>
 
 
-    <form id="inquery" class="form-inline relative-form">
+    <form id="inquery" action="./mailer2.php" class="form-inline relative-form">
       <input type="text" id="email" placeholder="NAME*" name="pswd" class="abcd">
       <input type="email" id="pwd" placeholder="CONTACT*" name="email">
       <input type="text" id="enquiry2" placeholder="ENQUIRY* (MAX 100 WORDS)" name="enquiry" >
       <button type="submit">REQUEST CALLBACK</button>
-    </form>
 
+
+    </form>
+     <div id="form-messages2" class="alert d-none text-center" role="alert"></div>
 
 
 
